[gd_scene load_steps=4 format=3 uid="uid://qgfpf1gtl165"]

[ext_resource type="Script" path="res://nodes/connector/io_base.gd" id="1_qmsw5"]

[sub_resource type="Gradient" id="Gradient_8jh6b"]
offsets = PackedFloat32Array(0, 0.38961, 1)
colors = PackedColorArray(0.786341, 0.823113, 3.85046e-07, 1, 0, 1, 0.5, 1, 0.990078, 0.623762, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pjw1k"]
gradient = SubResource("Gradient_8jh6b")
width = 5
height = 30
fill_to = Vector2(1, 1)

[node name="IOBase" type="HBoxContainer"]
script = ExtResource("1_qmsw5")

[node name="Button" type="Button" parent="."]
layout_mode = 2
icon = SubResource("GradientTexture2D_pjw1k")

[node name="NameField" type="LineEdit" parent="."]
custom_minimum_size = Vector2(85, 0)
layout_mode = 2
placeholder_text = "var_name"

[connection signal="button_down" from="Button" to="." method="_on_button_down"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="text_changed" from="NameField" to="." method="_on_name_field_text_changed"]
